adding community details

--- a/ServiceExercise/WWCCommunities/src/app/app.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/app.component.html
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="details">
-        <app-community-detail [community]="selectedCommunity.name"> </app-community-detail>
+        <app-community-detail [community]="selectedCommunity"> </app-community-detail>
     </div>
 </div>
