--- a/ServiceExercise/WWCCommunities/src/app/community-detail/community-detail.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/community-detail/community-detail.component.html
@@ -1,4 +1,5 @@
-<h3>{{community}} Community Details</h3>
-<p>
-
+<h3 class="details-title">{{community.name}} Community Details</h3>
+<h4 *ngIf="community.leader != null" class="contact-details">{{community.leader.name}}</h4>
+<p class="details">
+    {{community.details}}
 </p>
