--- a/ServiceExercise/WWCCommunities/src/app/community/community.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/community/community.component.html
@@ -1,5 +1,4 @@
 <div>
     {{name}}
-    <input type="button" [value]="btnValue" (click)="changeInterest()" />
-
+    <button (click)="changeInterest()">{{btnValue}}</button>
 </div>
