--- a/ServiceExercise/WWCCommunities/src/app/community/community.component.css
+++ b/ServiceExercise/WWCCommunities/src/app/community/community.component.css
@@ -6,3 +6,12 @@ div {
     margin-left: 70px;
     margin-bottom: 20px;
 }
+
+button {
+    height: 50px;
+    width: 100px;
+    border-radius: 30px;
+    background: #1abc9c;
+    font-size: 15pt;
+    border: none;
+}
