--- a/ServiceExercise/WWCCommunities/src/app/community/community.component.css
+++ b/ServiceExercise/WWCCommunities/src/app/community/community.component.css
@@ -1,10 +1,14 @@
-div {
+.container {
     height: 100px;
     width: 500px;
     border: 2pt solid black;
     margin-top: 20px;
     margin-left: 70px;
     margin-bottom: 20px;
+}
+
+.info {
+    font-size: 12pt;
 }
 
 button {
