--- a/ServiceExercise/WWCCommunities/src/app/community/community.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/community/community.component.html
@@ -1,4 +1,7 @@
-<div>
+<div class="container">
     {{name}}
     <button (click)="changeInterest()">{{btnValue}}</button>
+    <div class="info" (click)="updateCounter()">
+
+    </div>
 </div>
