--- a/ServiceExercise/WWCCommunities/src/app/app.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/app.component.html
@@ -5,7 +5,7 @@
     </h1>
     <div class="list">
         <div *ngFor="let community of communities">
-            <app-community [communityId]="community.id" [name]="community.name" [leader]="community.leader" (click)="showDetails(community)"></app-community>
+            <app-community [communityId]="community.id" [name]="community.name" [leaderId]="community.leaderId" (click)="showDetails(community)"></app-community>
         </div>
     </div>
     <div class="details">
