--- a/ServiceExercise/WWCCommunities/src/app/community-detail/community-detail.component.html
+++ b/ServiceExercise/WWCCommunities/src/app/community-detail/community-detail.component.html
@@ -1,6 +1,7 @@
 <div class="details">
     <h3 class="details-title">{{community.name}} Community Details</h3>
-   
+    <!--  <h4 *ngIf="leader != null" class="contact-details" (click)="updateCounter()">{{leader.name}}</h4> -->
+    <!-- <h6 *ngIf="community.isCurrentUserMember">You are a member</h6> -->
     <p class="details">
         {{community.details}}
     </p>
